# sketchup-imparator

./: PROGRESS.md  README.md  build_addons.py  env  env.fish  pyproject.toml  setup.py  sketchup.pyx
DOCS/: implementation_plan.md  task_description.md  walkthrough_and_recommendations.md
LayOutAPI.framework/Versions/A/: LayOutAPI
LayOutAPI.framework/Versions/A/Libraries/: libCommonGeometry.dylib  libCommonRTF.dylib
SketchUpAPI.framework/Versions/A/Frameworks/: libCommonGeometry.dylib  libCommonGeoutils.dylib  libCommonPreferences.dylib  libCommonUtils.dylib  libCommonZip.dylib
sketchup_imparator/: __init__.py
sketchup_imparator/LayOutAPI.framework/Versions/A/Headers/model/: selectionset.h
sketchup_imparator/LayOutAPI.framework/Versions/A/Libraries/: libCommonDraw2d.dylib  libCommonPreferences.dylib  libCommonUnits.dylib  libCommonUtils.dylib  libCommonZip.dylib  libLayOutControllers.dylib  libLayOutUtils.dylib
sketchup_imparator/LayOutAPI.framework/Versions/A/Resources/: Info.plist
sketchup_imparator/LayOutAPI.framework/Versions/A/_CodeSignature/: CodeResources
sketchup_imparator/SKPutil/: __init__.py
sketchup_imparator/SketchUpAPI.framework/Versions/A/Frameworks/: libCommonUnits.dylib
sketchup_imparator/SketchUpAPI.framework/Versions/A/_CodeSignature/: CodeResources
slapi/model/: loop.pxd  vertex.pxd
