[build-system]
requires = ["setuptools>=45", "wheel", "Cython>=0.29.24"]
build-backend = "setuptools.build_meta"

[project]
name = "sketchup-imparator"
version = "2026.1.0"
authors = [
    {name = "gurkanerol"},
    {name = "Martijn Berger"}
]
description = "Professional Python bindings and Blender importer for the SketchUp API (2026 Modernization)"
readme = "README.md"
requires-python = ">=3.11.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gurkanerol/sketchup-imparator"
"Bug Tracker" = "https://github.com/gurkanerol/sketchup-imparator/issues"

[tool.setuptools]
packages = ["sketchup_imparator", "slapi"]

# Note: We still need setup.py for proper Cython extension configuration
# See setup.py for the extension module definitions 

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.lint]
select = [
    "C4",  # Flake comprehensions Complexity is too high
    "DTZ", # timezone-aware datetimes, banning naive datetime usage
    "E",   # Fix pydocstyle errors
    "F",   # PyFlakes
    "I",   # isort
    "RUF", # Ruff lints
    "UP",  # pyupgrade
    "W",   # Fix tabs, trailing spaces, bad newlines, long doc lines, and bad escape sequences.
    ]
ignore = [
    "E203",   # Whitespace-before-punctuation
    "RUF012", # mutable-class-default
    ]

[tool.ruff.lint.pycodestyle]
max-line-length = 120